<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#450707"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/llCurvedd"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/rlAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </RelativeLayout>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="MY TIX"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Sedang Tayang :"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/batmann"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tampilanbatman"
            android:orientation="vertical"
            android:padding="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgagv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/posterbatman" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgagv"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/thebatman"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#F44336"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tampilanbp"
            android:orientation="vertical"
            android:padding="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgHistory"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/posterblackpanther" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgHistory"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/blackpanther"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#0B0B0B"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tampilanmoonknight"
            android:orientation="vertical"
            android:padding="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgKereta"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/postermoonkinght" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgKereta"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/moonknight"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#050505"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tampilanpesanan"
            android:orientation="vertical"
            android:padding="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imgHotel"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pesanananda" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgHotel"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/pesanan"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="#3F51B5"
                    android:textStyle="bold" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCurved"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:orientation="horizontal" />

</LinearLayout>